--- a/src/assets/styles/style.qss
+++ b/src/assets/styles/style.qss
@@ -1,6 +1,12 @@
+
+/* Main window */
+
 QMainWindow {
     background-color: #f9e8f0
 }
+
+
+/* Button to hide input tabs */
 
 QToolButton {
     font-size: 28px; 
@@ -11,6 +17,9 @@ QToolButton {
     color: #BE5985;
 }
 
+
+/* Title of the app */
+
 QLabel#title{
     font-size: 24px; 
     font-weight: bold; 
@@ -18,9 +27,15 @@ QLabel#title{
     color: #BE5985;
 }
 
+
+/* Splitters */
+
 QSplitter::handle { 
     background-color: transparent; 
 }
+
+
+/* Tabs */
 
 QTabWidget::pane {
     background-color: #BE5985;
@@ -41,12 +56,18 @@ QTabBar::tab:selected {
     background-color: #BE5985;
 }
 
-QLabel {
+
+/* Labels */
+
+QLabel#regularLabel {
     font-size: 16px;
     font-family: "Bahnschrift Semibold";
     font-weight: bold;
     color: #FFFFFF
 }
+
+
+/* Input widgets */
 
 QLabel#resultsLabel {
     font-size: 24px;
@@ -66,10 +87,6 @@ QLineEdit{
 
 QListView { 
     background-color: #FFFFFF; 
-}
-
-QPushButton:disabled {
-    background-color: #f9e8f0;
 }
 
 QComboBox {
@@ -122,7 +139,7 @@ QTextEdit#reversePrimer {
     font-size: 14px
 }
 
-QPushButton {
+QPushButton#regularButton {
     background-color: #f9e8f0;
     border: 4px solid #EC7FA9;
     border-radius: 8px;
@@ -132,33 +149,40 @@ QPushButton {
     font-size: 20px
 }
 
-QPushButton:hover {
+QPushButton#regularButton:hover {
     background-color: #fadeeb;
 }
 
-QPushButton:pressed {
+QPushButton#regularButton:pressed {
     background-color: #EC7FA9;
     border: 4px solid #fadeeb;
 }
 
-QSlider::groove:horizontal {
-    height: 8px;
-    background: #FFFFFF;
-    border-radius: 4px;
+QPushButton#regularButton:disabled {
+    background-color: #f9e8f0;
 }
 
-QSlider::handle:horizontal {
-    background: #fca9c9;
-    width: 16px;
-    height: 16px;
-    margin: -5px 0;  /* center it vertically */
-    border-radius: 8px;
+QCheckBox {
+    font-size: 16px;
+    font-family: "Bahnschrift Semibold";
+    font-weight: bold;
+    color: #FFFFFF
 }
 
-QSlider::tick-mark:horizontal {
-    background: #FFFFFF;
-    height: 5px;
+QCheckBox::indicator {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #EC7FA9;
+    border-radius: 3px;
+    background-color:  #FFFFFF;
 }
+
+QCheckBox::indicator:checked {
+    background-color: #EC7FA9;
+}
+
+
+/* LogBook widgets */
 
 QTextEdit#logBook{
     background-color: #FFFFFF;
@@ -175,6 +199,9 @@ QLabel#logBookTitle{
     font-weight: bold;
     color: #BE5985
 }
+
+
+/* Output widgets */
 
 QWidget#outputWidget{
     background-color: #ffffff;
@@ -225,8 +252,8 @@ QRadioButton::indicator:checked {
     border: 2px solid #EC7FA9;
 }
 
-/* Optional: on hover, make border darker */
 QRadioButton::indicator:hover {
     border: 2px solid #BE5985; /* hot pink */
 }
+
 
